--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.8.*
-  - snowflake-snowpark-python=
-  - streamlit=
+snowflake-snowpark-python==1.7.0
+streamlit==1.24.0
